v5_9_0 (2015-11-05) 
Fix of the previous v5_9_0 for DR13


JEB (2015-10-12)

- pro/plate/plate_to_string.pro:
   Correcting plate number definition for plates >= 10k
- pro/spec1d/platemerge.pro:
   Correcting trailing blank spaces when generating spAll for some programs

-------------------------------------------------------------------------------
v5_9_0
Tag for DR13

JEB (2015-09-24)

- bin/reformat_spectra_daily:
   Script to generate spec files after the daily reductions
- bin/uurundaily_script:
   Added reformat_spectra_daily command 
- bin/reformat_spectra.py:
   If update option on, look for existing spec files per plate-mjd-fiber 
   (not per plate only)
- bin/reformat_spectra_batch:
   Include --update option for catch up of missing plates using the utah cluster
- pro/spec2d/spplan2d.pro:
   Add dr13 keyword to exclude eboss plates and some RM plates. 

-------------------------------------------------------------------------------
v5_8_2 
Test tag for DR13

JEB (2015-09-18) 

platelist.pro: adding eBOSS LRGs and ELGs to the N_gal column and eBOSS quasars
                to N_QSO column in platelist. 
               Added eBOSS LRGs to %LRG1 column in platequality.
               Added eBOSS quasars to %QSO column in platequality.
               Added a %ELG column in platequality. 
                   

JEB (2015-09-05) 6-digit plate number armaggedon fixed, but not tested yet with a 
                 problematic plate
                 Added pro/plate/plate_to_string.pro to translate plate numbers into
                 strings. 

-------------------------------------------------------------------------------

VM : v5_8_1 (2015-08-11)
Adding bin/speclog_svn_update.sh : script called by the cronjob to auto update the $SPECLOG_DIR every morning
Changes in the following files :
bin/sos_apostart : disabled the ssh agent
bin/sos_runnerd.py : disabled doBookKeeping
-------------------------------------------------------------------------------
