@@ -166,7 +166,7 @@ if "$redoMode"; then
 	SOSDIR=/data/boss/sosredo
 	CONTROLDIR=/home/eboss/sos/control
 	RAWDIR=/data/spectro
-	PLUGDIR=/home/sdss4/products/NULL/speclog/trunk
+	PLUGDIR=/home/eboss/software/svn.sdss.org/data/sdss/speclog/trunk
 #	LOGDIR=/home/eboss/sos/logs
 elif "$testMode"; then
 	SOSDIR=/tmp/sos/out
@@ -187,7 +187,7 @@ else
 	SOSDIR=/data/boss/sos
 	CONTROLDIR=/home/eboss/sos/control
 	RAWDIR=/data/spectro
-	PLUGDIR=/home/sdss4/products/NULL/speclog/trunk
+	PLUGDIR=/home/eboss/software/svn.sdss.org/data/sdss/speclog/trunk
 #	LOGDIR=/home/eboss/sos/logs
 fi
 echo "SOS output directory is $SOSDIR"
